# aragon-design-system

./: .gitignore  .stylelintrc.json  README.md  angular.json  nx.json  package.json  tsconfig.json
libs/framework/src/theme/wtf2-material/schematics/: BUILD.bazel  collection.json  migration.json  tsconfig.json
libs/framework/src/theme/wtf2-material/schematics/ng-add/: index.spec.ts  index.ts  package-config.ts  schema.json  setup-project.ts  version-names.ts
libs/framework/src/theme/wtf2-material/schematics/ng-add/fonts/: material-fonts.ts  project-index-html.ts
libs/framework/src/theme/wtf2-material/schematics/ng-add/gestures/: hammerjs-import.ts
libs/framework/src/theme/wtf2-material/schematics/ng-add/theming/: create-custom-theme.ts  theming.ts
libs/framework/src/theme/wtf2-material/schematics/ng-generate/address-form/: index.spec.ts  index.ts  schema.json  schema.ts
libs/framework/src/theme/wtf2-material/schematics/ng-generate/dashboard/: index.spec.ts  index.ts  schema.json
libs/framework/src/theme/wtf2-material/schematics/ng-generate/nav/: index.spec.ts  index.ts  schema.json
libs/framework/src/theme/wtf2-material/schematics/ng-generate/table/: index.spec.ts  index.ts  schema.json
libs/framework/src/theme/wtf2-material/schematics/ng-generate/tree/: index.spec.ts  index.ts  schema.json
libs/framework/src/theme/wtf2-material/schematics/ng-update/: index.ts  upgrade-data.ts
libs/framework/src/theme/wtf2-material/schematics/ng-update/data/: attribute-selectors.ts  class-names.ts  constructor-checks.ts  css-selectors.ts  element-selectors.ts  input-names.ts  method-call-checks.ts  output-names.ts  property-names.ts
libs/framework/src/theme/wtf2-material/schematics/ng-update/test-cases/: index.spec.ts
libs/framework/src/theme/wtf2-material/schematics/ng-update/test-cases/misc/: class-inheritance.spec.ts  class-inheritance_input.ts  constructor-checks.spec.ts  constructor-checks_input.ts  import-checks.spec.ts  import-checks_input.ts  material-imports.spec.ts  material-imports_expected_output.ts  material-imports_input.ts
libs/framework/src/theme/wtf2-material/schematics/ng-update/test-cases/v6/: class-names_expected_output.ts  class-names_input.ts  css-selectors_expected_output.ts  css-selectors_input.ts  element-selectors_expected_output.ts  element-selectors_input.ts  input-names_expected_output.ts  input-names_input.ts  (+4 more)
libs/framework/src/theme/wtf2-material/schematics/ng-update/typescript/: module-specifiers.ts
(+1544 files in other folders)
