package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("//:packages.bzl", "VERSION_PLACEHOLDER_REPLACEMENTS")
load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")

filegroup(
    name = "schewtf2ics_assets",
    srcs = glob([
        "ng-generate/*/files/**/*",
        "**/*.json",
    ]),
)

ts_library(
    name = "schewtf2ics",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "ng-update/test-cases/**/*.ts",
            "ng-generate/*/files/**/*.ts",
        ],
    ),
    module_name = "@angular/material/schewtf2ics",
    tsconfig = ":tsconfig.json",
    deps = [
        "//src/cdk/schewtf2ics",
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schewtf2ics",
        "@npm//@schewtf2ics/angular",
        # TODO(devversion): Only include jasmine for test sources (See: tsconfig types).
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//tslint",
        "@npm//typescript",
    ],
)

# This package is intended to be combined into the main @angular/material package as a dep.
npm_package(
    name = "npm_package",
    srcs = [":schewtf2ics_assets"],
    replacements = VERSION_PLACEHOLDER_REPLACEMENTS,
    deps = [":schewtf2ics"],
)

### Testing rules

jasmine_node_test(
    name = "unit_tests",
    srcs = [":unit_test_sources"],
    data = [
        ":schewtf2ics_assets",
        ":schewtf2ics_test_cases",
    ],
)

ts_library(
    name = "unit_test_sources",
    testonly = True,
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = [
            "**/*.e2e.spec.ts",
            "ng-generate/*/files/**/*.spec.ts",
        ],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        ":schewtf2ics",
        "//src/cdk/schewtf2ics",
        "//src/cdk/schewtf2ics/testing",
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schewtf2ics",
        "@npm//@schewtf2ics/angular",
        "@npm//@types/fs-extra",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//fs-extra",
    ],
)

filegroup(
    name = "schewtf2ics_test_cases",
    testonly = True,
    srcs = glob([
        "ng-update/test-cases/**/*_input.ts",
        "ng-update/test-cases/**/*_expected_output.ts",
    ]),
)
